--- a/02-Homework/Develop/assets/css/style.css
+++ b/02-Homework/Develop/assets/css/style.css
@@ -1,3 +1,6 @@
+
+/* Header */
+
 * {
     box-sizing: border-box;
     padding: 0;
@@ -43,6 +46,8 @@ a {
     text-decoration: none;
 }
 
+/* Body */
+
 p {
     font-size: 16px;
 }
@@ -54,11 +59,6 @@ p {
     background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
-}
-
-.float-left {
-    float: left;
-    margin-right: 25px;
 }
 
 .float-right {
@@ -98,17 +98,7 @@ p {
     color: #ffffff;
 }
 
-.benefit-lead h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
+ h3 {
     margin-bottom: 10px;
     text-align: center;
 }
@@ -137,7 +127,10 @@ p {
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
-    color: #ffffff;
+    color: #ffffff;   
+    float: left;
+    margin-left: 25px;
+    
 }
 
 .online-reputation-management {
@@ -147,6 +140,8 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
+    float: right;
+    margin-left: 25px;
 }
 
 .social-media-marketing {
@@ -156,10 +151,13 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
+    float: right;
+    margin-left: 25px;
 }
 
 .search-engine-optimization img {
     max-height: 200px;
+    float: left;
 }
 
 .online-reputation-management img {
@@ -168,20 +166,10 @@ p {
 
 .social-media-marketing img {
     max-height: 200px;
+    float: left;
 }
 
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
+h2 { margin-bottom: 20px;
     font-size: 36px;
 }
 
