--- a/02-Homework/Develop/assets/css/style.css
+++ b/02-Homework/Develop/assets/css/style.css
@@ -66,7 +66,7 @@ p {
     margin-left: 20px;
     margin-right: 20px;
 }
-
+/* VVVVV ask how to group these, it should be possible...VVVVVV */
 /* Right side of screen */
 
 .benefits {
@@ -83,12 +83,8 @@ p {
 .benefit-lead {
     
     margin-bottom: 32px;
-    float: right;
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
+    
 
-/*     
 }
 
 .benefit-brand {
@@ -97,11 +93,11 @@ p {
 }
 
 .benefit-cost {
-    margin-bottom: 32px; */
+    margin-bottom: 32px; 
     
 }
 
-.benefit h3 {
+h3 {
     margin-bottom: 10px;
     text-align: center;
 }
@@ -124,7 +120,6 @@ p {
     max-width: 150px;
 }
 /* left side of screen */
-/* VVVVV ask how to group these, it should be possible...VVVVVV */
 
 .search-engine-optimization {
     margin-bottom: 20px;
