--- a/02-Homework/Develop/assets/css/style.css
+++ b/02-Homework/Develop/assets/css/style.css
@@ -64,7 +64,9 @@ p {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
-    margin-right: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    padding: 50px;
+        
 }
 /* VVVVV ask how to group these, it should be possible...VVVVVV */
 /* Right side of screen */
@@ -73,28 +75,15 @@ p {
     margin-right: 20px;
     padding: 20px;
     clear: both;
-    float: right;
     width: 20%;
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
+    float: right;
 }
 
 .benefit-lead {
-    
     margin-bottom: 32px;
-    
-
-}
-
-.benefit-brand {
-    margin-bottom: 32px;
-    
-}
-
-.benefit-cost {
-    margin-bottom: 32px; 
-    
 }
 
 h3 {
@@ -125,27 +114,24 @@ h3 {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    float: left;    
+    float: left;
+    background-color: #0072bb;    
 }
 
 .online-reputation-management {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
     float: left; 
+    background-color: #0072bb;
 }
 
 .social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
     float: left;
+    background-color: #0072bb;
 }
 
 .search-engine-optimization img {
